# base64

./: .gitignore  CMakeLists.txt  README.md  base64.vix  bindings.json  vix.json
examples/: decode.cpp  encode_standard.cpp  encode_url.cpp  jwt_like_segment.cpp
ffi/include/base64/: base64_ffi.h
ffi/src/: base64_ffi.cpp
include/base64/: base64.hpp
python/vix_base64/: _native.py  api.py
tests/: test_basic.cpp
